# quant_reporter

./: .gitignore  .sourcery.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  My_Combined_Report.html  My_Simple_Report.html  README.md  SECURITY.md  TODO.md  example.py  example_black_litterman.py  example_optimization.py  index.html  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-pr-review.yml  claude.yml  codeql.yml  dependabot-auto-merge.yml  semgrep.yml
docs/superpowers/plans/: 2026-05-31-sp0a-analytics-core.md  2026-05-31-sp0b-report-migration.md  2026-05-31-sp1a-foundations.md  2026-05-31-sp1b-engine.md  2026-06-01-sp-strategy.md  2026-06-01-sp4-recommendation.md  2026-06-02-planning-ips-keystone.md  2026-06-02-recommendation-walk-forward-validation.md
docs/superpowers/specs/: 2026-05-31-sp0-analytics-core-design.md  2026-05-31-sp1-backtest-engine-design.md  2026-05-31-v2.1-audit-research-raw.json  2026-05-31-v2.1-roadmap.md  2026-06-01-sp-strategy-design.md  (+3 more)
examples/: Black_Litterman_Report.html  Combined_Report.html  Monte_Carlo_Report.html  Optimization_Report.html  example.py  example_advanced_optimization.py  example_black_litterman.py  example_combined_report.py  example_full_report.py  example_monte_carlo.py  example_optimization.py  example_recommendation.py  example_risk_overlays.py  example_strategy_report.py  example_trend_following.py  example_walk_forward_backtest.py  generate_all_5_reports.py
examples/gallery/: README.md  generate_gallery.py  quant_reporter_gallery.ipynb
quant_testing/: Combined_Report.html  Monte_Carlo_Report.html  My_Combined_Report.html  My_Simple_Report.html  Portfolio_Optimization_Report.html  example.py  example_combined.py  example_optimization.py  example_validation.py
reports/: Black_Litterman_Report.html  Combined_Report.html  Monte_Carlo_Report.html  Optimization_Monte_Carlo.html  Optimization_Report.html
src/quant_reporter/: __init__.py  advanced_optimizers.py  analysis.py  analytics.py  asset_info.py  attribution.py  backtest.py  backtest_report.py  black_litterman.py  combined_report.py  data.py  factor_models.py  factor_plotting.py  factor_report.py  factor_tilts.py  html_builder.py  metrics.py  monte_carlo.py  monte_carlo_report.py  objectives.py  opt_core.py  opt_plotting.py  optimization.py  optimization_report.py  overfitting.py  performance_stats.py  planning.py  plotting.py  portfolio_report.py  providers.py  rebalancing.py  recommendation.py  recommendation_report.py  report_context.py  report_helpers.py  robust_estimators.py  signals.py  sizing.py  strategies.py  strategy.py  (+2 more)
test/: conftest.py  test_advanced_optimizers.py  test_analytics_core.py  test_asset_info.py  test_backtest.py  test_backtest_engine.py  test_backtest_report.py  test_black_litterman.py  test_combined_report.py  test_context_factory.py  test_ctx_analytics.py  test_data_quality_notes.py  test_factor_attribution.py  test_factor_offline.py  test_factor_tilts.py  test_html_builder.py  test_metrics.py  test_metrics_lib.py  test_monte_carlo_engine.py  test_objectives.py  test_opt_core_sp2.py  test_overfitting.py  test_performance_stats.py  test_planning.py  test_providers.py  test_recommend_cov_method.py  test_recommend_method.py  test_recommendation.py  test_recommendation_report.py  test_recommendation_validation.py  test_reports_offline.py  test_reports_smoke.py  test_rfr_fallback.py  test_robust_estimators.py  test_signals.py  test_sizing.py  test_strategies.py  test_strategy.py  test_synthetic_fixture.py  test_validation.py  (+2 more)
